# rnginline

./: .coveragerc  .editorconfig  .envrc  .gitattributes  .gitignore  .prettierrc  .travis.yml  CHANGELOG.md  CHANGELOG.rst  DEVELOPING.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  coverage.sh  gen_rfc3986_regex.py  pyproject.toml  requirements-dev.txt  setup.py  tasks.py  tox-dist.ini  tox-wheelcache.ini  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  release.yml
docker/: Dockerfile  dist-test-service-template.json  docker-compose.devcontainer.json  docker-compose.json  docker-compose.local.json  generate-compose-configs.sh  smoke-test-distribution.sh  unit-test-service-template.json
docs/: Makefile  api.rst  conf.py  doctest  external.rng  from-cmdline.rst  from-python.rst  index.rst  installing.rst  quickstart.rst  rnginline-example.sh  schema.rng  uri-resolution.rst
relaxnginline/: __init__.py  cmdline.py  constants.py  exceptions.py  postprocess.py  regexbuilder.py  test.py  uri.py  uri_regex.py  urlhandlers.py
relaxnginline/test/: mini_validator.py  test_cmdline.py  test_propagate_datatypelibrary.py  test_regexbuilder.py  test_relaxnginline.py  test_uri.py  test_uri_regex.py  test_urlhandlers.py
relaxnginline/test/data/include-invalid-xml/: invalid-xml.rng
relaxnginline/test/data/include-override-define/: included.rng
relaxnginline/test/data/inline-non-grammar-els/: illegal.rng
relaxnginline/test/data/loops/foo/: a.rng
relaxnginline/test/data/multiple-ref-1-fetch/: indirect.rng  schema.rng
relaxnginline/test/data/testcases/: _TODO.txt
relaxnginline/test/data/testcases/1/: baz.rng  positive-1.xml  schema.rng
relaxnginline/test/data/testcases/_rng-tut-9.1a/: inline.rng  positive-1.xml  positive-2.xml  schema.rng
relaxnginline/test/data/testcases/datatype-library-external/: positive.xml
relaxnginline/test/data/testcases/external-ref-1/: baz.rnc  (+2 more)
requirements/: all.txt  docs.txt  install.txt  invoke-tasks.txt  readme.txt  test.txt
rnginline/: __init__.py  cmdline.py  constants.py  exceptions.py  postprocess.py  regexbuilder.py  relaxng.rng  uri.py  uri_regex.py  urlhandlers.py
rnginline/test/: mini_validator.py  test_cmdline.py  test_propagate_datatypelibrary.py  test_regexbuilder.py  test_relaxnginline.py  test_rnginline.py  test_uri.py  test_uri_regex.py  test_urlhandlers.py
rnginline/test/data/: data-ɐʇɐp-data.txt
rnginline/test/data/datatype-library-inheritance/: base-external.rng  base-included.rng  external.rng  included.rng
rnginline/test/data/datatype-library-propagation/: a.rng  b.rng
rnginline/test/data/include-invalid-xml/: ok.rng
rnginline/test/data/include-non-rng-xml/: invalid-xml.rng
rnginline/test/data/include-override-define/: start.rng
rnginline/test/data/include-override-start/: start.rng
rnginline/test/data/inline-non-grammar-els/: foo-el.rng  grammar-foo-el.rng  legal.rng
rnginline/test/data/loops/: start.rng
(+83 files in other folders)
